# digital-economy

./: LICENSE  README.md  pyproject.toml
digital_economy/: hooks.py
digital_economy/digital_economy/doctype/digital_economy_index/: digital_economy_index.json  digital_economy_index.py
digital_economy/digital_economy/doctype/foundation_index/: foundation_index.json
digital_economy/digital_economy/doctype/foundation_sub_index/: foundation_sub_index.json  foundation_sub_index.py
digital_economy/digital_economy/doctype/ict_index/: ict_index.json  ict_index.py
digital_economy/digital_economy/doctype/ict_sub_index/: ict_sub_index.js  ict_sub_index.json  test_ict_sub_index.py
digital_economy/digital_economy/doctype/index_name/: index_name.json  index_name.py
digital_economy/digital_economy/doctype/logistics_index/: logistics_index.json
digital_economy/digital_economy/doctype/logistics_sub_index/: logistics_sub_index.json
digital_economy/digital_economy/doctype/sub_index_name/: sub_index_name.json  sub_index_name.py
digital_economy_v2/: hooks.py  modules.txt
digital_economy_v2/digital_economy_v2/doctype/digital_economy_index/: digital_economy_index.js  digital_economy_index.json  test_digital_economy_index.py
digital_economy_v2/digital_economy_v2/doctype/estimated_grdp/: estimated_grdp.js  estimated_grdp.json  estimated_grdp.py  test_estimated_grdp.py
digital_economy_v2/digital_economy_v2/doctype/estimated_industry_grdp/: estimated_industry_grdp.json  estimated_industry_grdp.py
digital_economy_v2/fixtures/: client_script.json  server_script.json
(+40 files in other folders)
